Build: Configure randomizedtesting properly
Original commit: elastic/x-pack-elasticsearch@e7b1a4fb9c10efdce1e4b519af28da40c658fcff